// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetWorkspace loadJSON should correctly parse and assign JSON properties 1`] = `
Object {
  "Test": Object {
    "fileName": "Test",
    "key": "Test",
    "tag": "Asset",
  },
}
`;

exports[`AssetWorkspace loadJSON should correctly parse and assign JSON properties 2`] = `
Array [
  Object {
    "internalKey": "a123",
    "universalKey": "Test",
  },
]
`;

exports[`AssetWorkspace setWML should correctly parse WML input 1`] = `
Object {
  "Test": Object {
    "Story": false,
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "a123",
              "tag": "Room",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "b456",
              "tag": "Room",
            },
          },
        ],
        "contextStack": Array [],
        "data": Object {
          "Story": undefined,
          "key": "Test",
          "tag": "Asset",
        },
      },
    ],
    "fileName": undefined,
    "instance": false,
    "key": "Test",
    "tag": "Asset",
    "zone": undefined,
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "a123#b456",
              "tag": "Exit",
            },
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "key": "a123",
          "tag": "Room",
        },
      },
    ],
    "key": "a123",
    "tag": "Room",
  },
  "a123#b456": Object {
    "appearances": Array [
      Object {
        "children": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "data": Object {
          "from": "a123",
          "key": "a123#b456",
          "name": "welcome",
          "tag": "Exit",
          "to": "b456",
        },
      },
    ],
    "from": "a123",
    "key": "a123#b456",
    "name": "welcome",
    "tag": "Exit",
    "to": "b456",
  },
  "b456": Object {
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "b456#a123",
              "tag": "Exit",
            },
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "key": "b456",
          "tag": "Room",
        },
      },
    ],
    "key": "b456",
    "tag": "Room",
  },
  "b456#a123": Object {
    "appearances": Array [
      Object {
        "children": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "b456",
            "tag": "Room",
          },
        ],
        "data": Object {
          "from": "b456",
          "key": "b456#a123",
          "name": "vortex",
          "tag": "Exit",
          "to": "a123",
        },
      },
    ],
    "from": "b456",
    "key": "b456#a123",
    "name": "vortex",
    "tag": "Exit",
    "to": "a123",
  },
}
`;

exports[`AssetWorkspace setWML should correctly parse WML input 2`] = `
Array [
  Object {
    "internalKey": "a123",
    "universalKey": "TestA",
  },
  Object {
    "internalKey": "b456",
    "universalKey": "ROOM#UUID-0",
  },
]
`;

exports[`AssetWorkspace setWML should look up import namespace mappings 1`] = `
Array [
  Object {
    "internalKey": "b456",
    "universalKey": "TestB",
  },
  Object {
    "internalKey": "a123",
    "universalKey": "testImport",
  },
  Object {
    "internalKey": "c789",
    "universalKey": "testFeature",
  },
]
`;

exports[`AssetWorkspace setWML should populate export namespace mappings 1`] = `
Array [
  Object {
    "exportAs": "Room2",
    "internalKey": "a123",
    "universalKey": "ROOM#UUID-0",
  },
  Object {
    "internalKey": "b456",
    "universalKey": "ROOM#UUID-1",
  },
]
`;
